ekip uyelerinin crud islemleri devam ettirildi.

--- a/gorevler.html
+++ b/gorevler.html
@@ -2,7 +2,8 @@
 -changestatus servisi yazılacak.
 -üye crud tamamlanacak.
 -rol ve ekip için tekrar eden kodlar optimize edilecek.
-
+-varsayılan görseli ayarlardan yüklenecek hale getirilecek.
+-üyenin bağlı olduğu rol silindiğinde üyenin de görseli silinsin.
 
 
 
