--- a/gorevler.html
+++ b/gorevler.html
@@ -3,9 +3,9 @@
 -üye crud tamamlanacak.
 -rol ve ekip için tekrar eden kodlar optimize edilecek.
 -varsayılan görseli ayarlardan yüklenecek hale getirilecek.
--üyenin bağlı olduğu rol silindiğinde üyenin de görseli silinsin.
 
 
 
+<!-- -üyenin bağlı olduğu rol silindiğinde üyenin de görseli silinsin. -->
 <!-- -blog,hizmet detay sayfaları yapılacak. -->
 <!-- -konum harita olarak eklenecek. -->
