--- a/gorevler.html
+++ b/gorevler.html
@@ -1,11 +1,10 @@
--görsel yüklme için servis yazılacak.
--changestatus servisi yazılacak.
--üye crud tamamlanacak.
 -rol ve ekip için tekrar eden kodlar optimize edilecek.
 -varsayılan görseli ayarlardan yüklenecek hale getirilecek.
+-görsel yüklme için servis yazılacak.
+-services crud islemleri yazılacak.
 
-
-
+<!-- -changestatus servisi yazılacak. -->
+<!-- -üye crud tamamlanacak. -->
 <!-- -üyenin bağlı olduğu rol silindiğinde üyenin de görseli silinsin. -->
 <!-- -blog,hizmet detay sayfaları yapılacak. -->
 <!-- -konum harita olarak eklenecek. -->
