--- a/gorevler.html
+++ b/gorevler.html
@@ -2,6 +2,8 @@
 -varsayılan görseli ayarlardan yüklenecek hale getirilecek.
 -görsel yüklme için servis yazılacak.
 -services crud islemleri yazılacak.
+-statuslardaki bugu kategorilerdeki gibi düzelt.
+
 
 <!-- -changestatus servisi yazılacak. -->
 <!-- -üye crud tamamlanacak. -->
